Code Splitting / add SEO meta / eslint add eol-last

--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Survive Loop</title>
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👨🏿</text></svg>">
+  <!-- SEO Meta Tags -->
+  <title>Survive Loop 人生迴圈</title>
+  <meta name="description" content="Survive Loop 是一款挑戰運氣與生存極限的網頁遊戲。面對層層煩惱，你能存活多久？立即挑戰，看看你是歐皇還是地獄倒楣鬼！" />
+  <meta name="keywords" content="Survive Loop, 生存遊戲, 運氣, 煩惱, 網頁遊戲, Web Game, 休閒遊戲, suanriz" />
+  <meta name="author" content="suanriz" />
+  <link rel="canonical" href="https://suanriz.github.io/surviveLoop/" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://suanriz.github.io/surviveLoop/" />
+  <meta property="og:title" content="Survive Loop - 挑戰運氣與生存極限" />
+  <meta property="og:description" content="Survive Loop 是一款挑戰運氣與生存極限的網頁遊戲。面對層層煩惱，你能存活多久？立即挑戰，看看你是歐皇還是地獄倒楣鬼！" />
+  <meta property="og:image" content="https://github.com/suanriz/surviveLoop/blob/master/docs/og-image.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://suanriz.github.io/surviveLoop/" />
+  <meta property="twitter:title" content="Survive Loop - 挑戰運氣與生存極限" />
+  <meta property="twitter:description" content="Survive Loop 是一款挑戰運氣與生存極限的網頁遊戲。面對層層煩惱，你能存活多久？立即挑戰，看看你是歐皇還是地獄倒楣鬼！" />
+  <meta property="twitter:image" content="https://github.com/suanriz/surviveLoop/blob/master/docs/og-image.jpg" />
 </head>
 
 <body>
