fix og-image path

--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
   <meta property="og:url" content="https://suanriz.github.io/surviveLoop/" />
   <meta property="og:title" content="Survive Loop - 挑戰運氣與生存極限" />
   <meta property="og:description" content="Survive Loop 是一款挑戰運氣與生存極限的網頁遊戲。面對層層煩惱，你能存活多久？立即挑戰，看看你是歐皇還是地獄倒楣鬼！" />
-  <meta property="og:image" content="https://github.com/suanriz/surviveLoop/blob/master/docs/og-image.jpg" />
+  <meta property="og:image"
+    content="https://raw.githubusercontent.com/suanriz/surviveLoop/refs/heads/master/docs/og-image.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://suanriz.github.io/surviveLoop/" />
   <meta property="twitter:title" content="Survive Loop - 挑戰運氣與生存極限" />
   <meta property="twitter:description" content="Survive Loop 是一款挑戰運氣與生存極限的網頁遊戲。面對層層煩惱，你能存活多久？立即挑戰，看看你是歐皇還是地獄倒楣鬼！" />
-  <meta property="twitter:image" content="https://github.com/suanriz/surviveLoop/blob/master/docs/og-image.jpg" />
+  <meta property="twitter:image"
+    content="https://raw.githubusercontent.com/suanriz/surviveLoop/refs/heads/master/docs/og-image.jpg" />
 </head>
 
 <body>
