--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon"
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
+  <link rel="icon" type="image/svg+xml"
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👨🏿</text></svg>">
   <!-- SEO Meta Tags -->
   <title>Survive Loop 人生迴圈</title>
@@ -12,6 +15,7 @@
   <meta name="keywords" content="Survive Loop, 生存遊戲, 運氣, 煩惱, 網頁遊戲, Web Game, 休閒遊戲, suanriz" />
   <meta name="author" content="suanriz" />
   <link rel="canonical" href="https://suanriz.github.io/surviveLoop/" />
+  <meta name="theme-color" content="#ffffff" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
